--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>TheGreenHouse &middot; About</title>
 		<meta charset="utf-8">
-		<meta name="description" content="THEGREENHOUSE is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
-		<meta name="keywords" content="association cultural-heritage events sharing-economy italy">
+		<meta name="description" content="TheGreenHouse is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
+		<meta name="keywords" content="thegreenhouse association cultural-heritage events sharing-economy italy cooperative society non-profit cilento unesco formation culture art development free life creativity share knowledge experience dream international study center karin kempf bernard stiegler">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-114x114.png">
@@ -37,13 +37,13 @@
 		<!-- Header -->
 			<header id="header">
 				<h4><p>
-				<strong><a href="https://thegreenhouse.online">THEGREENHOUSE</a></strong> is a non-profit association, located in <strong><a href="https://en.wikipedia.org/wiki/Orria" target="_blank">Orria (Salerno)</a></strong>, a beautiful country in the south of Italy inside <strong><a href="https://en.wikipedia.org/wiki/Parco_Nazionale_del_Cilento,_Vallo_di_Diano_e_Alburni" target="_blank">Parco Nazionale del Cilento</a></strong>, an <strong><a href="http://whc.unesco.org/en/list/842" target="_blank">UNESCO</a></strong> heritage.
+				<strong><a href="https://thegreenhouse.online">TheGreenHouse</a></strong> is a non-profit association, located in <strong><a href="https://en.wikipedia.org/wiki/Orria" target="_blank">Orria (Salerno)</a></strong>, a beautiful country in the south of Italy inside <strong><a href="https://en.wikipedia.org/wiki/Parco_Nazionale_del_Cilento,_Vallo_di_Diano_e_Alburni" target="_blank">Parco Nazionale del Cilento</a></strong>, an <strong><a href="http://whc.unesco.org/en/list/842" target="_blank">UNESCO</a></strong> heritage.
 				Its goal is to promote <strong><a href="https://thegreenhouse_aps.eventbrite.com" target="_blank">events</a></strong> and <strong>formation activities</strong> in the <strong>cultural</strong> and <strong>artistic field</strong>, to allow the <strong>personal improvement</strong> of the attenders and the <strong>social</strong> and <strong>cultural development</strong> of the <strong><a href="https://en.wikipedia.org/wiki/Cilento" target="_blank">Cilento</a></strong> country.
-				Our social world mainly bases its interactions on capitals incapable of regeneration and only intended to cumulate and put people in a bad competition mood. <strong><a href="https://thegreenhouse.online">THEGREENHOUSE</a></strong> comes from the dream of <strong>setting life and creativity free</strong>, putting in touch people who sincerely want to <strong>share</strong> and <strong>improve</strong> their <strong>knowledge</strong> and <strong>experience</strong> with the main goal to <strong>be proud of what they work on</strong>.
+				Our social world mainly bases its interactions on capitals incapable of regeneration and only intended to cumulate and put people in a bad competition mood. <strong><a href="https://thegreenhouse.online">TheGreenHouse</a></strong> comes from the dream of <strong>setting life and creativity free</strong>, putting in touch people who sincerely want to <strong>share</strong> and <strong>improve</strong> their <strong>knowledge</strong> and <strong>experience</strong> with the main goal to <strong>be proud of what they work on</strong>.
 				Most of capital types but money or goods can grow through sharing: the more we give, the more we get. DNA. Hugs. Knowledge. Artistic and human maturity. Culture. Emotions. Friendship. Esteem. Happiness.
 				Our first capital is each and every one who has been, who is and who will be inspired by this concept and started to think about, to imagine... to <strong>share our dream</strong>.
 				</p>
-				<p><strong><a href="https://thegreenhouse.online">THEGREENHOUSE</a></strong> is a <strong>cooperative society</strong> of ideas and knowledge, an <strong><a href="https://singinflower.com" target="_blank">International Study Center</a></strong>, a place where <strong>sustainable economy</strong> has a real chance, since life quality simply means good food, good atmosphere, good state of mind. Thanks for being here, you’re our first real gain.
+				<p><strong><a href="https://thegreenhouse.online">TheGreenHouse</a></strong> is a <strong>cooperative society</strong> of ideas and knowledge, an <strong><a href="https://singinflower.com" target="_blank">International Study Center</a></strong>, a place where <strong>sustainable economy</strong> has a real chance, since life quality simply means good food, good atmosphere, good state of mind. Thanks for being here, you’re our first real gain.
 				</p></h4>
 			</header>
 
