--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 		<title>TheGreenHouse APS &middot; About</title>
 		<meta charset="utf-8">
 		<meta name="description" content="TheGreenHouse is a non-profit association, located in Orria (Salerno), a beautiful country in the south of Italy inside Parco Nazionale del Cilento, an UNESCO heritage.">
+		<link rel="image_src" href="https://cdn.thegreenhouse.online/image/grotta.jpg">
 		<meta name="keywords" content="thegreenhouse association cultural-heritage events sharing-economy italy cooperative society non-profit cilento unesco formation culture art development free life creativity share knowledge experience dream international study center karin kempf bernard stiegler">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://cdn.thegreenhouse.online/image/tgh_icon/apple-touch-icon-57x57.png">
