--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 		window.cookieconsent.initialise({
   		"palette": {
     		"popup": {
-    			"background": "#000"
+    			"background": "#252e39"
     		},
     		"button": {
-    			"background": "#4e5c0f"
+    			"background": "#14a7d0"
     		}
   		},
   		"theme": "classic",
