--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<meta name="msapplication-wide310x150logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x150.png">
 		<meta name="msapplication-square310x310logo" content="https://cdn.thegreenhouse.online/image/tgh_icon/mstile-310x310.png">
 		<link rel="stylesheet" href="assets/css/main.css">
-		<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/cookieconsent.css">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
 		<script>
 		window.addEventListener("load", function(){
@@ -43,7 +43,6 @@
     		}
   		},
   		"theme": "classic",
-			"position": "bottom-right",
   		"content": {
     		"message": "This website uses cookies to ensure you get the best experience.",
     		"dismiss": "Accept"
