--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				</ul>
 				<ul class="copyright">
 					<li>&copy; 2016 - 2017</li>
-					<li><a href="https://cdn.thegreenhouse.online/document/statuto_aps.pdf" target="_blank" title="Statute">TheGreenHouse APS</a></li>
+					<li>TheGreenHouse</li>
 					<li><strong><a href="https://thegreenhouse.online/about" title="About">About</a></strong></li>
 					<li><strong><a href="http://blog.thegreenhouse.online" target="_blank" title="Blog">Blog</a></strong></li>
 				</ul>
